#1293 added more updates to fix layout issues with the client site theme

--- a/tendenci/core/base/static/css/admin_menu.css
+++ b/tendenci/core/base/static/css/admin_menu.css
@@ -451,6 +451,11 @@ a.edit-setting { text-decoration: underline; cursor: pointer; }
     z-index: 9999999 !important;
 }
 
+.t-top-nav li {
+    margin: 0;
+    font-size: 14px;
+}
+
 .t-top-nav .navbar-header {
     min-height: 30px;
     height: 30px;
